<resources>

    <string name="app_name">Homepage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_text">Covid-Safe</string>
    <string name="intro_text">TRACK YOUR TRACE and be COVIDSAFE</string>
    <string name="get_started">GET STARTED</string>
    <string name="email_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="or_text">Or</string>
    <string name="create_account_text">CREATE ACCOUNT</string>
    <string name="info_title">COVID INFORMATION</string>


    <string name="symptoms">Symptoms</string>
    <string name="Protect">Protect yourself and others</string>



    <string name="symptomsM">Most common symptoms:</string>
    <string name="symptomsM1">•	Fever</string>
    <string name="symptomsM2">•	Cough</string>
    <string name="symptomsM3">•	Tiredness</string>
    <string name="symptomsM4">•	Loss of taste or smell</string>
    <string name="symptomsL">Less common symptoms</string>
    <string name="symptomsL1">•	Sore throat</string>
    <string name="symptomsL2">•	Headache</string>
    <string name="symptomsL3">•	Aches and pains</string>
    <string name="symptomsL4">• Diarrhoea</string>
    <string name="symptomsL5">•	A rash on skin, or discolouration of fingers or toes</string>
    <string name="symptomsL6">•	Red or irritated eyes</string>

    <string name="sy">Serious Symptoms</string>
    <string name="sy1">•	difficulty breathing or shortness of breath</string>
    <string name="sy2">•	loss of speech or mobility, or confusion</string>
    <string name="sy3">•	chest pain</string>

    <string name="info_suggest">Seek immediate medical attention if you have serious symptoms. Always call before visiting your doctor or health facility.</string>
    <string name="info_suggest1">If you experienced any side effect or suspect whether you have experienced any side effect of your vaccination, please visit the link below to proceed to a free Australian health check.
</string>
    <string name="txtCredi">https://www.healthdirect.gov.au/symptom-checker/tool/basic-details <u>underline</u> </string>

</resources>