<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    android:background="@color/white_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:fontFamily="@font/averia_libre_bold"
        android:text="@string/title_text"
        android:textColor="@color/blue_dark"
        android:textSize="30sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:background="@color/white_background"
        android:orientation="vertical"
        android:padding="1dp">

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="match_parent"
            android:layout_height="50dp"
        android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/white_road"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/introText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/averia_serif_libre_italic"
                    android:text="@string/intro_text" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/averia_libre_bold"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textColor="@color/blue_dark"
                android:textStyle="bold" />

            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/averia_libre_bold"
                android:text="@string/create_account_text"
                android:textAllCaps="false"
                android:textColor="@color/blue_dark"

                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="356dp"
        android:layout_height="234dp"
        app:srcCompat="@drawable/virus_icon" />

</LinearLayout>